--- a/html/TACO-WEB/order.html
+++ b/html/TACO-WEB/order.html
@@ -11,10 +11,10 @@
     <h1 style="text-align: center;">Pedido</h1>
     <form action="pedido.js">
         <label for="nombre">Proporciona tu Nombre:</label>
-        <input type="text" name="nombre" id="nombre" placeholder="Nombre"><br><br>
+        <input type="text" name="nombre" id="nombre" placeholder="Nombre" required minlength="5"><br><br>
 
         <label for="mesa">Ingresa tu numero de Mesa:</label>
-        <input type="number" id="mesa" name="mesa" placeholder="Numero de mesa" min="0"><br><br>
+        <input type="number" id="mesa" name="mesa" placeholder="Numero de mesa" min="0" required><br><br>
 
         <p>Para aqui o para llevar?</p>
         <input type="radio" name="aquiollevar" id="aqui" value="aqui">
