--- a/practica4/html/index.html
+++ b/practica4/html/index.html
@@ -5,12 +5,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokedex</title>
+    <link rel="stylesheet" href="../css/styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
 </head>
 <body>
-    <h1>Pokedex</h1>
-    <input type="text" name="pokename" id="pokename" placeholder="pikachu">
-    <img src="" alt="pokemon" id="pokeImg">
-    <button onclick="fetchPokemon()">Cambiar pokemon</button>
+    <header>
+
+        <h1 class="main-title">Pokedex</h1>
+    </header>
+
+    <main>
+        <div class="container">
+            <div class="pokemon-form">
+                <input type="text" name="pokename" id="pokename" placeholder="pikachu"><br><br>
+                <button onclick="fetchPokemon()" class="btn btn-primary">Cambiar pokemon</button>
+            </div>
+            <div class="image">
+                <img src="../img/hello.jpg" alt="pokemon" id="pokeImg" class="photo">
+            </div>
+            <div class="pokemon-data">
+                <p id="nombre">Nombre: </p>
+                <p id="altura">Altura: </p>
+                <p id="peso">Peso: </p>
+                <p id="abilidad">Abilidad: </p>
+            </div>
+        </div>
+    </main>
+    <!-- <img src="" alt="pokemon" id="pokeImg"> -->
 </body>
 <script src="../js/poke.js"></script>
 </html>
